[package]
name = "kagemusha-analyzer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Tor network analysis — Onionoo client, exit detection, consensus, privacy audit"

[lints]
workspace = true

[dependencies]
kagemusha-core = { path = "../kagemusha-core" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
ipnet = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
